src/test/deca/syntax/parser/invalid/decl_var_type_reserved_words_true.deca
// Test de parser, le type n'est pas valide, mais est un mot
// réservé à la place, ici true

{
    true x = 5;
}